--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Instagram Checker</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #ff9a9e, #fad0c4);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -14,44 +14,67 @@
       height: 100vh;
       margin: 0;
     }
+
     .box {
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      background: white;
+      padding: 40px 30px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
       text-align: center;
+      animation: fadeIn 1s ease-in-out;
     }
+
+    h2 {
+      color: #e1306c;
+      margin-bottom: 20px;
+      font-size: 28px;
+    }
+
     input[type="text"] {
-      padding: 10px;
-      width: 250px;
+      padding: 12px;
+      width: 260px;
       font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+      border: 2px solid #e1306c;
+      border-radius: 8px;
+      outline: none;
+      transition: 0.3s ease;
     }
+
+    input[type="text"]:focus {
+      border-color: #ff4081;
+      box-shadow: 0 0 8px rgba(255, 64, 129, 0.2);
+    }
+
     button {
       margin-left: 10px;
-      padding: 10px 20px;
+      padding: 12px 25px;
       font-size: 16px;
-      background: #e1306c;
-      color: #fff;
+      background: linear-gradient(to right, #e1306c, #ff4081);
+      color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
+      transition: transform 0.2s ease;
     }
+
     button:hover {
-      background: #c72b5f;
+      transform: scale(1.05);
     }
+
     footer {
-      margin-top: 30px;
+      margin-top: 40px;
       font-size: 14px;
-      color: #555;
+      color: #fff;
     }
+
     footer a {
-      color: #e1306c;
-      text-decoration: none;
-    }
-    footer a:hover {
+      color: #fff;
       text-decoration: underline;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
@@ -65,6 +88,19 @@
   <footer>
     Developed by <a href="https://www.facebook.com/share/16z1mL9TtC/" target="_blank">Nurul Chowdhury</a>
   </footer>
+
+  <!-- 🔻 Adsterra Ad Code -->
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '985562a663b32a0a22d0df5a821e1445',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/985562a663b32a0a22d0df5a821e1445/invoke.js"></script>
+  <!-- 🔺 End Adsterra Ad -->
 
   <script>
     function visitProfile() {
