--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
       font-weight: bold;
     }
 
+    .ad-container {
+      margin-top: 25px;
+    }
+
     footer {
       margin-top: auto;
       padding: 20px;
@@ -142,9 +146,11 @@ nonexistentuser"></textarea>
     <div class="results" id="results"></div>
     <div class="summary" id="summaryCount"></div>
 
-    <!-- Adsterra Ads Code -->
-    <script async="async" data-cfasync="false" src="//pl27100472.profitableratecpm.com/e88abb6b860829230a6d5edab44d5a38/invoke.js"></script>
-    <div id="container-e88abb6b860829230a6d5edab44d5a38"></div>
+    <!-- ✅ Your Ad Code Below -->
+    <div class="ad-container">
+      <script async="async" data-cfasync="false" src="//pl27100699.profitableratecpm.com/f15bf7483f70d66cc40727a9b55195e6/invoke.js"></script>
+      <div id="container-f15bf7483f70d66cc40727a9b55195e6"></div>
+    </div>
   </div>
 
   <footer>
